# agent_google_adk_study

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: 01_overview.md  02_agent_types.md  03_coordinator_executor.md  04_tool_system.md  05_callback_system.md  06_session_persistence.md  07_tracing.md  08_react_mode.md  09_execution_flow.md  10_context_management.md  11_builtin_prompts.md  12_advanced_features.md  README.md
src/adk_cli/: __init__.py  agent.py  callbacks.py  cli.py  llmmodel.py  persistence.py  react_agent.py  tools.py  tracing.py
tests/: test_agent.py
